--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -25,7 +25,7 @@
             <h3>Content Strategy</h3>
             <h3>UX Design</h3>
             <h3>Web Development</h3>
-            <h3>Social Media</h3>    
+            <h3>Social Media</h3>     
             </section>
             <section><h2>Works</h2>
             <h3>Interior Design</h3>
@@ -36,8 +36,8 @@
             <h3>Who are we</h3>
             <h3>Our culture</h3>
             <h3>How we work</h3>
-            </section>
-            <section><h2>Latest news</h2>
+            </section>h
+           <section><h2>Latest news</h2>
                <h3>Hoc loco tenere se Triarius non potuit.</h3>
                <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
                <h3>Bestiarum vero nullum iudicium puto.</h3> 
