--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -16,13 +16,13 @@
             <section>
                 <header>
                     <h2>Headings</h2>
-                    <h1>Heading level 1</h1>
-                    <h2>Heading level 2</h2>
-                    <h3>Heading level 3</h3>
-                    <h4>Heading level 4</h4>
-                    <h5>Heading level 5</h5>
-                    <h6>Heading level 6</h6>
                 </header>
+                <h1>Heading level 1</h1>
+                <h2>Heading level 2</h2>
+                <h3>Heading level 3</h3>
+                <h4>Heading level 4</h4>
+                <h5>Heading level 5</h5>
+                <h6>Heading level 6</h6>
             </section>
             <section>
                 <header>
@@ -70,6 +70,46 @@
                 </header>
                 <div>
                     <hr>
+                </div>
+            </section>
+            <br>
+            <!-- Blockquotes -->
+            <section>
+                <header>
+                    <h2>Blockquotes</h2>
+                </header>
+                <div>
+                    <h3>Inline quote</h3>
+                    <q>Stay hungry. Stay foolish.</q>
+                </div>
+                <div>
+                    <h3>Blockquote</h3>
+                    <blockquote>
+                        <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+                            <cite>Kanye West, Musician</cite>
+                        </p>
+                    </blockquote>
+                </div>
+            </section>
+            <br>
+            <!-- Typography -->
+            <section>
+                <header>
+                    <h2>Typography</h2>
+                </header>
+                <div>
+                    <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address>
+                </div>
+                <div>
+                    <pre>
+                        <code>
+                            <h2>My title</h2>
+                            <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+                        </code>
+                    </pre>
+                </div>
+                <div>
+                    <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
                 </div>
             </section>
         </main>
